--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 node{
   stage {'git checkout'} {
-  git 'https://github.com/aja6009/lama'
+  git 'https://github.com/aja6009/lama/blob/master/jenkinsfile'
   }
   stage {'compile package'} {
   sh 'mvn package'
